syntax = "proto3"; // 使用 Protobuf 3 语法

message Message{
  int64 messageId=1;
  int64 messageConversationId=2;
  int64 messageCreateTime=3;
  int64 messageSenderId=4;
  int64 messageReceiverId=5;
  string messageContext=6;
  bool messageRead=7;
}